--- a/index.html
+++ b/index.html
@@ -252,13 +252,15 @@
   </style>
 </head>
 <body>
-
+<!-- ====== Favicon ====== -->
+  <link rel="icon" href="Logo.png" type="image/png" />
 <header>
   <img src="https://via.placeholder.com/120" alt="Anil Lama" />
   <h1>ANIL LAMA (अनिल लामा)</h1>
   <h2>Founder / Nepali Typing Center / Lead</h2>
    <!-- Social Media Links -->
       <nav class="social-nav">
+       <nav class="social-nav">
         <a href="https://www.youtube.com/@anillama9033" aria-label="YouTube" target="_blank"><i class="fab fa-youtube"></i></a>
         <a href="https://www.facebook.com/profile.php?id=100005158245674" aria-label="Facebook" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://www.linkedin.com/in/anil-l-3b0a23236/" aria-label="LinkedIn" target="_blank"><i class="fab fa-linkedin"></i></a>
@@ -270,7 +272,7 @@
     <a href="#training">Training & Certifications</a>
     <a href="#experience">Experience</a>
     <a href="#contact">Contact</a>
-    <a href="#Nepali Typing Converter">Nepali Typing Converter</a>
+    <a href="#Nepali Typing Center">Nepali Typing Center</a>
   </nav>
 
 </header>
@@ -387,9 +389,9 @@
   </div>
 </section>
 
-<!-- Nepali Typing Converter-->
-<section id="Nepali Typing Converter">
-  <h2>Nepali Typing Converter</h2>
+<!-- Nepali Typing Center-->
+<section id="Nepali Typing Center">
+  <h2>Nepali Typing Centerr</h2>
      <section id="nepali-typing-converter">
 <h3 style="font-size: 32px; font-weight: 600; text-align: center; margin-bottom: 30px; color: #333;">Unicode Converter</h3>
           <iframe src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542" width="100%" height="360" frameborder="0" scrolling="no" style="border-radius: 8px; width: 100%;"></iframe>
@@ -398,11 +400,15 @@
       </div>
     </section>
   </main>
-
     
   </div>
 </section>
-
+<script>
+  /* ===== Auto Redirect to Nepali Typing Center ===== */
+  setTimeout(function() {
+    window.location.href = 'blog,html';
+  }, 3000); // Redirect after 3 seconds
+</script>
  <!-- ====== Footer ====== -->
   <footer>
     <p>&copy; 2025 Anil Lama. All Rights Reserved.</p>
