--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Anil Lama Portfolio</title>
+  <title>Welcome to anil lama portfolio</title>
   <style>
  <style>
     /* ---------- Clock widget ---------- */
