--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 <body>
 
 <header>
-  <img src="https://via.placeholder.com/120" alt="Anil Lama" />
+  <img src="Amal.jpg" alt="Anil Lama" />
   <h1>ANIL LAMA (अनिल लामा)</h1>
   <h2>Founder / Nepali Typing Center / Lead</h2>
    <!-- Social Media Links -->
