--- a/index.html
+++ b/index.html
@@ -277,18 +277,22 @@
   <!-- Awards Section -->
   <section id="awards">
     <h2>Awards & Achievements</h2>
+     <section id="awards">
+    <h2>Awards & Achievements</h2>
     <div class="card">
       <h3>Quarterly Impact Award - 2024</h3>
       <p>
         I am honored to have received the Quarterly Impact Award, recognizing my dedication and contributions at Fonepay.  
-        <a href="https://www.linkedin.com/posts/fonepaynepal_hardwork-dedication-impact-activity-7339135682180800513-Jhej/" target="_blank"><strong>View Achievement</strong></a>
+        <a href="https://www.linkedin.com/posts/fonepaynepal_hardwork-dedication-impact-activity-7339135682180800513-Jhej/" target="_blank">
+<p><strong>View Achievement</strong></p>
       </p>
     </div>
     <div class="card">
       <h3>Nepali Typing Center</h3>
       <p>
         I successfully launched and manage the Nepali Typing Center, which is now running smoothly on Google Marketplace.  
-        <a href="https://g.co/kgs/sqaEEzb" target="_blank"><strong>Check It Out</strong></a>
+        <a href="https://g.co/kgs/sqaEEzb" target="_blank">
+<p><strong>Check It Out</strong></p>
       </p>
     </div>
   </section>
