--- a/index.html
+++ b/index.html
@@ -71,22 +71,6 @@
       margin-bottom: 15px;
     }
 
-    /* ---------- Social Links ---------- */
-    .social-nav {
-      margin-top: 10px;
-    }
-
-    .social-nav a {
-      margin: 0 8px;
-      font-size: 1.3rem;
-      color: #fff;
-      transition: color 0.3s ease;
-    }
-
-    .social-nav a:hover {
-      color: #ffca28;
-    }
-
     /* ---------- Sections ---------- */
     section {
       max-width: 1000px;
@@ -138,23 +122,6 @@
       box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
     }
 
-    /* ---------- Buttons ---------- */
-    .btn {
-      display: inline-block;
-      padding: 12px 25px;
-      background-color: #0d47a1;
-      color: #fff;
-      border-radius: 5px;
-      font-weight: 600;
-      margin-top: 20px;
-      transition: all 0.3s ease;
-    }
-
-    .btn:hover {
-      background-color: #1565c0;
-      transform: translateY(-2px);
-    }
-
     /* ---------- Footer ---------- */
     footer {
       background-color: #0d47a1;
@@ -163,58 +130,6 @@
       text-align: center;
       margin-top: 50px;
       box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.15);
-    }
-
-    .footer-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      gap: 25px;
-      margin-bottom: 10px;
-    }
-
-    .footer-container a {
-      color: #fff;
-      font-size: 0.95rem;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      gap: 6px;
-      position: relative;
-      padding: 5px 8px;
-      transition: all 0.3s ease-in-out;
-    }
-
-    /* Icon Color */
-    .footer-container a i {
-      color: #ffca28;
-      transition: transform 0.3s ease;
-    }
-
-    /* Hover Effect */
-    .footer-container a:hover {
-      color: #ffca28;
-    }
-
-    .footer-container a:hover i {
-      transform: rotate(15deg) scale(1.2);
-    }
-
-    /* Underline Animation */
-    .footer-container a::after {
-      content: "";
-      position: absolute;
-      width: 0%;
-      height: 2px;
-      bottom: -3px;
-      left: 0;
-      background-color: #ffca28;
-      transition: width 0.3s ease-in-out;
-    }
-
-    .footer-container a:hover::after {
-      width: 100%;
     }
 
     footer p {
@@ -229,11 +144,6 @@
         width: 100px;
         height: 100px;
       }
-
-      .footer-container {
-        flex-direction: column;
-        gap: 12px;
-      }
     }
   </style>
 </head>	
@@ -241,26 +151,9 @@
 
   <!-- Header -->
   <header>
-    </div>
     <img src="Amal.jpg" alt="Anil Lama" />
     <h1>ANIL LAMA (अनिल लामा)</h1>
     <h2>Founder | Nepali Typing Center | L1 Lead at Fonepay</h2>
-
-    <!-- Social Media Links -->
-    <div class="social-nav">
-      <a href="https://www.youtube.com/@anillama9033" target="_blank"><i class="fab fa-youtube"></i></a>
-      <a href="https://www.facebook.com/profile.php?id=100005158245674" target="_blank"><i class="fab fa-facebook"></i></a>
-      <a href="https://www.linkedin.com/in/anil-l-3b0a23236/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.instagram.com/anil.moktan07" target="_blank"><i class="fab fa-instagram"></i></a>
-    </div>
-<div class="footer-container">
-      <a href="#about"><i class="fas fa-user"></i> About</a>
-      <a href="#awards"><i class="fas fa-award"></i> Awards</a>
-      <a href="#education"><i class="fas fa-graduation-cap"></i> Education</a>
-      <a href="#training"><i class="fas fa-certificate"></i> Certifications</a>
-      <a href="#experience"><i class="fas fa-briefcase"></i> Experience</a>
-      <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
-      <a href="#typing"><i class="fas fa-keyboard"></i> Typing Tool</a>
   </header>
 
   <!-- About Section -->
@@ -281,16 +174,14 @@
       <h3>Quarterly Impact Award - 2024</h3>
       <p>
         I am honored to have received the Quarterly Impact Award, recognizing my dedication and contributions at Fonepay.  
-        <a href="https://www.linkedin.com/posts/fonepaynepal_hardwork-dedication-impact-activity-7339135682180800513-Jhej/" target="_blank">
-<p><strong>View Achievement</strong></p>
+        <a href="https://www.linkedin.com/posts/fonepaynepal_hardwork-dedication-impact-activity-7339135682180800513-Jhej/" target="_blank"><strong>View Achievement</strong></a>
       </p>
     </div>
     <div class="card">
       <h3>Nepali Typing Center</h3>
       <p>
         I successfully launched and manage the Nepali Typing Center, which is now running smoothly on Google Marketplace.  
-        <a href="https://g.co/kgs/sqaEEzb" target="_blank">
-<p><strong>Check It Out</strong></p>
+        <a href="https://g.co/kgs/sqaEEzb" target="_blank"><strong>Check It Out</strong></a>
       </p>
     </div>
   </section>
