--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
       <a href="https://www.youtube.com/@anillama9033" target="_blank"><i class="fab fa-youtube"></i></a>
       <a href="https://www.facebook.com/profile.php?id=100005158245674" target="_blank"><i class="fab fa-facebook"></i></a>
       <a href="https://www.linkedin.com/in/anil-l-3b0a23236/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.instagram.com/anil.moktan07" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/anil.lama__" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
 
     <div class="footer-container">
