--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
   <!-- Header -->
   <header>
-    <img src="Amal.jpg" alt="Anil Lama" />
+    <img src="assets/img/Amal.jpg" alt="Anil Lama" />
     <h1>ANIL LAMA (अनिल लामा)</h1>
     <h2>Founder | Nepali Typing Center | L1 Lead at Fonepay</h2>
 
@@ -244,12 +244,12 @@
     <div class="card">
       <h3>Microsoft Excel 101</h3>
       <p>Satyava Digital Class – 2023</p>
-      <img src="excel.png" alt="Microsoft Excel Certificate" class="certificate-img" />
+      <img src="assets/img/excel.png" alt="Microsoft Excel Certificate" class="certificate-img" />
     </div>
     <div class="card">
       <h3>Google Analytics Certification</h3>
       <p>Issued by Google Skillshop</p>
-      <img src="Google Analytics.png" alt="Google Analytics Certificate" class="certificate-img" />
+      <img src="assets/img/Google Analytics.png" alt="Google Analytics Certificate" class="certificate-img" />
     </div>
     <div class="card">
       <h3>Photoshop & Editing (Basic)</h3>
