--- a/nepalitypingcenter/index.html
+++ b/nepalitypingcenter/index.html
@@ -54,7 +54,7 @@ background:linear-gradient(90deg,#fff,#91c2ff);
 #hero{
 height:85vh;display:flex;align-items:center;text-align:center;
 /* Using a generic dark background since local file won't load */
-background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), url('https://picsum.photos/seed/tech/1920/1080') center/cover no-repeat;
+background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), url('https://lh3.googleusercontent.com/p/AF1QipPbe2vQyejGIFzo3K4fyB3w5VnjZqa4x4dgqKSw=s1360-w1360-h1020-rw') center/cover no-repeat;
 position:relative;
 }
 .hero-content{position:relative;z-index:2;}
