--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <meta name="author" content="Anil Lama" />
   <title>Anil Lama | Portfolio</title>
   
+  <!-- SEO -->
+<meta name="description" content="Fast & Accurate Nepali & English typing, PDF to Word, Thesis Typing, and Form Filling services in Nepal.">
+<meta name="keywords" content="Nepali typing, Unicode typing, typing service Nepal, PDF to Word Nepal, thesis typing Nepal, government form typing,PDF to Word, typing Near Me, Nepali typing center, Portfolio, english to nepali">
+<meta name="author" content="Nepali Typing Center">
+  
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
@@ -222,7 +227,7 @@
       <h3>Nepali Typing Center</h3>
       <p>I successfully launched and manage the Nepali Typing Center, which is now running smoothly on Google Marketplace.</p>
       <a href="https://g.co/kgs/sqaEEzb" target="_blank" class="btn">Check It Out</a>
-    </div>
+          </div>
   </section>
 
   <!-- Education Section -->
@@ -252,8 +257,14 @@
       <img src="assets/img/Google Analytics.png" alt="Google Analytics Certificate" class="certificate-img" />
     </div>
     <div class="card">
-      <h3>Photoshop & Editing (Basic)</h3>
+      <h3>Photoshop,Design & Editing (Basic)</h3>
       <p>I have learned Photoshop and image editing through self-study on YouTube, enabling me to create visually appealing graphics, edit images, and enhance digital content.</p>
+<img src="assets/img/NT.jpg" alt="Photoshop,Design &editing" class="certificate-img" />
+    </div>
+<div class="card">
+      <h3>CCEP(Certified Cybersecurity Educator Professional)</h3>
+      <p>I’m thrilled to share that I’ve successfully passed the CCEP Exam! This milestone reflects my dedication to advancing my knowledge in cybersecurity. A huge thank you to everyone for who supported me along the way – the journey of continuous learning is always better with a great network.I’m excited to apply these insights to real-world security challenges and contribute to building safer, more resilient systems.</p>
+<img src="assets/img/CCEP.jpg" alt="CCEP(Certified Cybersecurity Educator Professional)" class="certificate-img" />
     </div>
   </section>
 
@@ -271,7 +282,7 @@
       <p>Oversaw multiple projects, organized training for women empowerment initiatives, and enhanced personal and professional skills.</p>
     </div>
     <div class="card">
-      <h3>Fonepay | L1 Lead</h3>
+      <h3>Fonepay | Lead- L1 Support & Social Media Support</h3>
       <p>2022 – Present</p>
       <p>Key role in ensuring seamless digital payment operations, optimizing processes, and contributing to company growth through innovation and efficiency.</p>
     </div>
@@ -293,8 +304,9 @@
             width="100%" height="360" frameborder="0" scrolling="no"
             style="border-radius: 8px;"></iframe>
     <p style="font-size: 12px; text-align: center; margin-top: 8px; color: #888;">© Nepali Unicode</p>
+<a href="https://anillama.com.np/nepalitypingcenter/" target="_blank" class="btn">Check Website</a>
   </section>
-  
+    
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Anil Lama | All Rights Reserved.</p>
