--- a/index.html
+++ b/index.html
@@ -3,14 +3,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="Anil Lama Portfolio - Founder of Nepali Typing Center, L1 Lead at Fonepay, and Digital Payment Enthusiast." />
   <meta name="author" content="Anil Lama" />
-  <title>Anil Lama | Portfolio</title>
+  <meta name="description" content="Anil Lama (अनिल लामा) - Personal portfolio website showing my projects, experience, awards, skills, Nepali Typing Center, and professional profile from Nepal.">
+  <title>Anil Lama (अनिल लामा) - Portfolio | Web Professional from Nepal</title>
   
   <!-- SEO -->
 <meta name="description" content="Fast & Accurate Nepali & English typing, PDF to Word, Thesis Typing, and Form Filling services in Nepal.">
 <meta name="keywords" content="Nepali typing, Unicode typing, typing service Nepal, PDF to Word Nepal, thesis typing Nepal, government form typing,PDF to Word, typing Near Me, Nepali typing center, Portfolio, english to nepali">
 <meta name="author" content="Nepali Typing Center">
+<meta name="description" content="Official portfolio website of Anil Lama from Nepal. Explore my projects, skills and professional experience.">
+    <!-- Indexing -->
+  <meta name="robots" content="index, follow">
+  
+    <!-- Canonical URL -->
+  <link rel="canonical" href="https://anillama.com.np/">
   
   <!-- Font Awesome for Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -186,14 +192,14 @@
   <!-- Header -->
   <header>
     <img src="assets/img/Amal.jpg" alt="Anil Lama" />
-    <h1>ANIL LAMA (अनिल लामा)</h1>
+    <h1>ANIL LAMA (अनिल लामा)- Personal Portfolio</h1>
     <h2>Founder | Nepali Typing Center | L1 Lead at Fonepay</h2>
 
     <div class="social-nav">
       <a href="https://www.youtube.com/@anillama9033" target="_blank"><i class="fab fa-youtube"></i></a>
       <a href="https://www.facebook.com/profile.php?id=100005158245674" target="_blank"><i class="fab fa-facebook"></i></a>
       <a href="https://www.linkedin.com/in/anil-l-3b0a23236/" target="_blank"><i class="fab fa-linkedin"></i></a>
-      <a href="https://www.instagram.com/anil.lama__" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.instagram.com/anil.lama__/#" target="_blank"><i class="fab fa-instagram"></i></a>
     </div>
 
     <div class="footer-container">
@@ -210,7 +216,7 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
-    <p>Welcome to my portfolio! I am <strong>Anil Lama</strong>, as an L1 Lead at Fonepay, dedicated to driving efficiency and innovation in the digital payment sector. With a strong work ethic and a passion for technology, I thrive in fast-paced environments, ensuring seamless operations and delivering impactful solutions.</p>
+    <p>Welcome to my professional portfolio! I am <strong>Anil Lama</strong>, as an L1 Lead at Fonepay, dedicated to driving efficiency and innovation in the digital payment sector. With a strong work ethic and a passion for technology, I thrive in fast-paced environments, ensuring seamless operations and delivering impactful solutions.</p>
     <p>I enjoy solving challenges, improving processes, and continuously enhancing digital experiences.</p>
   </section>
 
