--- a/nepali-typing/index.html
+++ b/nepali-typing/index.html
@@ -1,1 +1,397 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Nepali Typing Center</title>
 
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+<!-- SEO -->
+<meta name="description" content="Fast & Accurate Nepali & English typing, PDF to Word, Thesis Typing, and Form Filling services in Nepal.">
+<meta name="keywords" content="Nepali typing, Unicode typing, typing service Nepal, PDF to Word Nepal, thesis typing Nepal, government form typing, PDF to Word, typing, Near Me, Nepali typing center">
+<meta name="author" content="Nepali Typing Center">
+
+<style>
+:root{
+--primary:#0057ff;
+--accent:#ff1744;
+--glass:rgba(255,255,255,.08); /* Slightly more transparent */
+--shadow:0 25px 50px rgba(0,0,0,.15);
+--hover-glow:0 0 30px rgba(0,87,255,.6);
+}
+
+/* RESET */
+*{margin:0;padding:0;box-sizing:border-box;}
+body{
+font-family:'Poppins',sans-serif;
+background:#020b2c;
+color:white;
+overflow-x:hidden;
+}
+
+/* HEADER */
+header{
+position:sticky;top:0;z-index:1000;
+background:rgba(0,0,0,.7);backdrop-filter:blur(12px);
+box-shadow:0 10px 25px rgba(0,0,0,.4);
+}
+.container{max-width:1200px;margin:auto;padding:0 25px;}
+nav{display:flex;justify-content:space-between;align-items:center;height:80px;}
+.logo{
+font-size:1.7rem;font-weight:700;
+background:linear-gradient(90deg,#fff,#91c2ff);
+-webkit-background-clip:text;color:transparent;
+}
+.logo span{color:var(--accent);}
+.nav-links{display:flex;gap:30px;}
+.nav-links a{color:white;font-weight:500;transition:.3s;}
+.nav-links a:hover{color:#91c2ff;}
+.mobile-menu-btn{display:none;color:white;font-size:1.7rem;cursor:pointer;}
+
+/* HERO */
+#hero{
+height:85vh;display:flex;align-items:center;text-align:center;
+/* Using a generic dark background since local file won't load */
+background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.9)), url('https://lh3.googleusercontent.com/p/AF1QipPbe2vQyejGIFzo3K4fyB3w5VnjZqa4x4dgqKSw=s1360-w1360-h1020-rw') center/cover no-repeat;
+position:relative;
+}
+.hero-content{position:relative;z-index:2;}
+.hero-content h1{
+font-size:3.2rem;background:linear-gradient(90deg,#6e00ff,#00b2ff,#ff1744);
+-webkit-background-clip:text;color:transparent;
+animation:titleGlow 6s infinite alternate;
+}
+@keyframes titleGlow{0%{letter-spacing:0px;}100%{letter-spacing:1.5px;}}
+.hero-content p{font-size:1.2rem;opacity:1;margin:15px 0 30px;color:white;}
+.btn{
+padding:12px 32px;border-radius:999px;border:none;cursor:pointer;font-weight:600;
+background:linear-gradient(135deg,#0057ff,#6e00ff);color:white;
+box-shadow:0 0 20px rgba(0,132,255,.4);transition:.4s;
+}
+.btn:hover{
+transform:translateY(-3px) scale(1.03);
+box-shadow:0 0 35px rgba(0,132,255,.7);
+}
+.btn-secondary{
+background:linear-gradient(135deg,#ff1744,#ff5f7b);
+box-shadow:0 0 20px rgba(255,23,68,.4);
+}
+
+/* SECTIONS */
+section{padding:90px 0;}
+.section-title{text-align:center;margin-bottom:60px;}
+.section-title h2{font-size:2.6rem;color:white;}
+.section-title span{display:block;width:80px;height:4px;background:var(--accent);margin:10px auto;}
+
+/* GLASS CARD */
+.glass{
+background:var(--glass);
+backdrop-filter:blur(12px);
+border-radius:18px;
+border:1px solid rgba(255,255,255,.15);
+box-shadow:var(--shadow);
+transition:transform 0.3s, box-shadow 0.3s;
+}
+
+/* SERVICES */
+.services-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
+gap:30px;
+}
+.service-card{padding:45px 35px;text-align:center;color:white;position:relative;overflow:hidden;transition:.4s;}
+.service-card:hover{transform:translateY(-10px) scale(1.02);}
+.service-card::after{content:"";position:absolute;inset:0;background:linear-gradient(120deg,rgba(0,89,255,.2),rgba(255,23,68,.2));opacity:0;transition:.4s;}
+.service-card:hover::after{opacity:1;}
+.service-icon{font-size:3.2rem;color:var(--accent);margin-bottom:15px;}
+.service-card h3{color:white;font-size:1.4rem;margin-bottom:5px;}
+.service-card p{color:white;}
+
+/* PRICING CARDS */
+.pricing-grid{
+display:grid;
+grid-template-columns:repeat(auto-fit,minmax(280px,1fr));
+gap:30px;
+}
+.price-card{
+padding:45px;text-align:center;background:rgba(255,255,255,0.05);
+border-radius:20px;backdrop-filter:blur(15px);
+border:1px solid rgba(255,255,255,.15);
+box-shadow:0 10px 30px rgba(0,0,0,0.2);
+transition:all 0.3s ease;color:white;
+}
+.price-card:hover{
+transform:translateY(-10px) scale(1.03);
+box-shadow:0 0 35px rgba(0,132,255,.6);
+}
+.price-card h3{font-size:1.8rem;color:white;margin-bottom:15px;}
+.price{font-size:2rem;color:white;margin:15px 0;}
+.features-list{list-style:none;text-align:left;margin:20px 0;padding:0;}
+.features-list li{margin:12px 0;font-size:0.95rem;color:white;display:flex;align-items:center;gap:10px;}
+.features-list i{color:var(--accent);}
+.price-card .btn{margin-top:15px;width:100%;padding:10px;}
+
+/* CONTACT SECTION - FIXED ALIGNMENT */
+#contact{background:#020b2c;padding:90px 0;}
+.contact-wrapper{
+display:flex;
+justify-content:center; /* Centers the card horizontally */
+align-items:center;     /* Centers content vertically */
+flex-wrap:wrap;
+gap:40px;
+}
+
+.contact-card{
+/* Fixed sizing and structure */
+width: 100%;
+max-width: 450px;
+background:rgba(255,255,255,0.05);
+backdrop-filter:blur(15px);
+border-radius:20px;
+padding:50px 40px;
+box-shadow:0 10px 30px rgba(0,0,0,0.2);
+border:1px solid rgba(255,255,255,.1);
+margin: 0 auto; /* Ensures center if alone */
+}
+
+.contact-card-header{
+text-align: center;
+margin-bottom: 40px;
+}
+.contact-card-header i{
+font-size:3rem;color:var(--accent);margin-bottom:15px;
+display:block;
+}
+.contact-card-header h3{
+font-size:1.8rem;font-weight:600;color:white;
+}
+
+/* The list container */
+.contact-items-list{
+display: flex;
+flex-direction: column;
+gap: 25px; /* Space between each item */
+}
+
+.contact-item{
+display: flex;
+align-items: center; /* Vertically centers icon and text */
+gap: 20px;          /* Space between icon and text */
+}
+
+.contact-icon{
+width:55px;
+height:55px;
+border-radius:50%;
+background:var(--primary);
+display:flex;
+justify-content:center;
+align-items:center;
+color:white;
+font-size:1.4rem;
+flex-shrink:0; /* Prevents icon from squishing */
+}
+
+.contact-text{
+display: flex;
+flex-direction: column;
+justify-content: center;
+}
+
+.contact-text h4{
+font-size:1.1rem;
+font-weight:600;
+color:white;
+margin-bottom: 4px;
+}
+.contact-text p{
+font-size:0.95rem;
+color:rgba(255,255,255,0.7); /* Slightly lighter for hierarchy */
+margin: 0;
+}
+
+/* FOOTER */
+footer{background:#000;padding:45px 0;text-align:center;color:white;}
+.reveal{opacity:0;transform:translateY(40px);transition:.7s;}
+.show{opacity:1;transform:translateY(0);}
+
+/* MOBILE */
+@media(max-width:768px){
+.nav-links{position:absolute;top:80px;right:0;width:100%;background:#000;padding:20px 0;display:none;flex-direction:column;text-align:center;}
+.nav-links.active{display:flex;}
+.mobile-menu-btn{display:block;}
+.hero-content h1{font-size:2.4rem;}
+.price-card{max-width:90%;margin:auto;margin-bottom:20px;}
+.contact-card{padding: 30px;}
+.contact-item { gap: 15px; }
+.contact-icon { width: 45px; height: 45px; font-size: 1.2rem; }
+}
+</style>
+</head>
+<body>
+
+<header>
+<div class="container">
+<nav>
+<a class="logo">Nepali<span>Typing</span>Center</a>
+<ul class="nav-links">
+<li><a href="#hero">Home</a></li>
+<li><a href="#services">Services</a></li>
+<li><a href="#pricing">Pricing</a></li>
+<li><a href="#contact">Contact</a></li>
+</ul>
+<div class="mobile-menu-btn"><i class="fa fa-bars"></i></div>
+</nav>
+</div>
+</header>
+
+<!-- HERO -->
+<section id="hero">
+<div class="container hero-content">
+<h1>Professional Nepali & English Typing Services</h1>
+<p>Government • Legal • Thesis • Documents • Online Forms</p>
+
+<a href="#contact" class="btn btn-secondary">Start Now</a>
+<a href="#services" class="btn" style="margin-left:10px;border:2px solid white;background:transparent;">Explore Services</a>
+</div>
+</section>
+
+<!-- SERVICES -->
+<section id="services">
+<div class="container">
+<div class="section-title">
+<h2>Our Services</h2><span></span>
+</div>
+
+<div class="services-grid">
+<div class="service-card glass reveal">
+<div class="service-icon"><i class="fas fa-keyboard"></i></div>
+<h3>Nepali & English Typing</h3>
+<p>Fast & accurate typing for official and personal documents.</p>
+</div>
+
+<div class="service-card glass reveal">
+<div class="service-icon"><i class="fas fa-file-pdf"></i></div>
+<h3>PDF to Word</h3>
+<p>Edit scanned & locked PDF documents easily.</p>
+</div>
+
+<div class="service-card glass reveal">
+<div class="service-icon"><i class="fas fa-id-card"></i></div>
+<h3>Form Filling</h3>
+<p>Driving License, NID, and Online Applications.</p>
+</div>
+</div>
+</div>
+</section>
+
+<!-- PRICING -->
+<section id="pricing">
+<div class="container">
+<div class="section-title">
+<h2>Simple Pricing</h2><span></span>
+</div>
+
+<div class="pricing-grid">
+<div class="price-card glass reveal">
+<h3>Standard</h3>
+<div class="price">Rs. 95/page</div>
+<ul class="features-list">
+<li><i class="fa fa-check"></i> English Typing</li>
+<li><i class="fa fa-check"></i> Basic Formatting</li>
+<li><i class="fa fa-check"></i> 24hr Delivery</li>
+</ul>
+<a href="#contact" class="btn">Choose Plan</a>
+</div>
+
+<div class="price-card featured glass reveal">
+<h3>Premium</h3>
+<div class="price">Rs. 500/page</div>
+<ul class="features-list">
+<li><i class="fa fa-check"></i> Nepali Unicode / Preeti</li>
+<li><i class="fa fa-check"></i> Complex Formatting</li>
+<li><i class="fa fa-check"></i> Express Delivery</li>
+</ul>
+<a href="#contact" class="btn btn-secondary">Choose Plan</a>
+</div>
+
+<div class="price-card glass reveal">
+<h3>Thesis / Project</h3>
+<div class="price">Negotiable</div>
+<ul class="features-list">
+<li><i class="fa fa-check"></i> Full Project Typing</li>
+<li><i class="fa fa-check"></i> Cover Design</li>
+<li><i class="fa fa-check"></i> Print Ready</li>
+</ul>
+<a href="#contact" class="btn">Contact Us</a>
+</div>
+</div>
+</div>
+</section>
+
+<!-- CONTACT -->
+<section id="contact">
+<div class="container">
+<div class="section-title">
+<h2>Contact Us</h2><span></span>
+</div>
+
+<div class="contact-wrapper reveal">
+<div class="contact-card glass">
+<div class="contact-card-header">
+<i class="fas fa-address-book"></i>
+<h3>Nepali Typing Center</h3>
+</div>
+
+<!-- Fixed Structure for Proper Alignment -->
+<div class="contact-items-list">
+<div class="contact-item">
+<div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
+<div class="contact-text">
+<h4>Phone</h4>
+<p>+977 9851359109</p>
+</div>
+</div>
+
+<div class="contact-item">
+<div class="contact-icon"><i class="fas fa-envelope"></i></div>
+<div class="contact-text">
+<h4>Email</h4>
+<p>nepalitypingcenter@gmail.com</p>
+</div>
+</div>
+
+<div class="contact-item">
+<div class="contact-icon"><i class="fas fa-map-marker-alt"></i></div>
+<div class="contact-text">
+<h4>Location</h4>
+<p>Kathmandu, Nepal</p>
+</div>
+</div>
+</div>
+
+</div>
+</div>
+</section>
+
+<footer>
+<p>© 2026 Nepali Typing Center — All Rights Reserved</p>
+</footer>
+
+<script>
+// Mobile Menu
+const btn=document.querySelector(".mobile-menu-btn");
+const nav=document.querySelector(".nav-links");
+btn.addEventListener("click",()=>nav.classList.toggle("active"));
+
+// Scroll Reveal
+const observer=new IntersectionObserver(entries=>{
+entries.forEach(e=>{if(e.isIntersecting)e.target.classList.add("show");});
+});
+document.querySelectorAll(".reveal").forEach(el=>observer.observe(el));
+</script>
+
+</body>
+</html>
