Add SEO metadata and structured data to index.html

--- a/nepali-typing/index.html
+++ b/nepali-typing/index.html
@@ -12,7 +12,23 @@
 <meta name="description" content="Fast & Accurate Nepali & English typing, PDF to Word, Thesis Typing, and Form Filling services in Nepal.">
 <meta name="keywords" content="Nepali typing, Unicode typing, typing service Nepal, PDF to Word Nepal, thesis typing Nepal, government form typing, PDF to Word, typing, Near Me, Nepali typing center">
 <meta name="author" content="Nepali Typing Center">
+<meta name="description" content="Type in Nepali online easily using our free Nepali typing tool. Supports Unicode and Romanized typing.">
+<meta name="keywords" content="Nepali typing, online Nepali typing, type in Nepali, Nepali typing tool">
+<meta name="robots" content="index, follow">
 
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Anil Lama",
+  "url": "https://anillama.com.np/",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://anillama.com.np/nepali-typing/?q={search_term_string}",
+    "query-input": "required name=search_term_string"
+  }
+}
+</script>
 <style>
 :root{
 --primary:#0057ff;
