--- a/nepali-typing/index.html
+++ b/nepali-typing/index.html
@@ -391,6 +391,15 @@ footer{background:#000;padding:45px 0;text-align:center;color:white;}
 </div>
 </div>
 </section>
+    <!-- Nepali Typing Tool Section -->
+  <section id="typing">
+    <h2>Nepali Typing Converter</h2>
+    <iframe src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542"
+            width="100%" height="360" frameborder="0" scrolling="no"
+            style="border-radius: 8px;"></iframe>
+    <p style="font-size: 12px; text-align: center; margin-top: 8px; color: #888;">© Nepali Unicode</p>
+<a href="https://anillama.com.np/nepali-typing/" target="_blank" class="btn">Check Website</a>
+  </section>
 
 <footer>
 <p>© 2026 Nepali Typing Center — All Rights Reserved</p>
