--- a/nepali-typing/index.html
+++ b/nepali-typing/index.html
@@ -13,7 +13,7 @@
 <meta name="keywords" content="Nepali typing, Unicode typing, typing service Nepal, PDF to Word Nepal, thesis typing Nepal, government form typing, PDF to Word, typing, Near Me, Nepali typing center">
 <meta name="author" content="Nepali Typing Center">
 <meta name="description" content="Type in Nepali online easily using our free Nepali typing tool. Supports Unicode and Romanized typing.">
-<meta name="keywords" content="Nepali typing, online Nepali typing, type in Nepali, Nepali typing tool">
+<meta name="keywords" content="Nepali typing, online Nepali typing, type in Nepali, Nepali typing tool, Roman to unicode converter">
 <meta name="robots" content="index, follow">
 
   <script type="application/ld+json">
@@ -85,6 +85,8 @@ animation:titleGlow 6s infinite alternate;
 padding:12px 32px;border-radius:999px;border:none;cursor:pointer;font-weight:600;
 background:linear-gradient(135deg,#0057ff,#6e00ff);color:white;
 box-shadow:0 0 20px rgba(0,132,255,.4);transition:.4s;
+display:inline-block;
+text-decoration:none;
 }
 .btn:hover{
 transform:translateY(-3px) scale(1.03);
@@ -226,6 +228,14 @@ margin-bottom: 4px;
 font-size:0.95rem;
 color:rgba(255,255,255,0.7); /* Slightly lighter for hierarchy */
 margin: 0;
+}
+
+/* NEW CSS FOR TYPING TOOL CARD */
+.typing-tool-container{
+max-width: 800px; /* Controls the width of the card */
+margin: 0 auto;   /* Centers the card */
+padding: 30px;    /* Inner spacing */
+text-align: center;
 }
 
 /* FOOTER */
@@ -391,14 +401,23 @@ footer{background:#000;padding:45px 0;text-align:center;color:white;}
 </div>
 </div>
 </section>
+
     <!-- Nepali Typing Tool Section -->
   <section id="typing">
-    <h2>Nepali Typing Converter</h2>
-    <iframe src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542"
-            width="100%" height="360" frameborder="0" scrolling="no"
-            style="border-radius: 8px;"></iframe>
-    <p style="font-size: 12px; text-align: center; margin-top: 8px; color: #888;">© Nepali Unicode</p>
-<a href="https://anillama.com.np/nepali-typing/" target="_blank" class="btn">Check Website</a>
+    <div class="container">
+        <div class="section-title">
+            <h2>Nepali Typing Converter</h2><span></span>
+        </div>
+        
+        <!-- Glass Card Container with Width Constraint -->
+        <div class="typing-tool-container glass reveal">
+            <iframe src="https://www.ashesh.com.np/linknepali-unicode3.php?api=492041p542"
+                    width="100%" height="360" frameborder="0" scrolling="no"
+                    style="border-radius: 8px; display:block; margin-bottom:15px;"></iframe>
+            <p style="font-size: 12px; text-align: center; margin-bottom: 20px; color: #ccc;">© Nepali Unicode</p>
+            
+        </div>
+    </div>
   </section>
 
 <footer>
