--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <div class="card">
-      <p><strong>Email:</strong> <a href="mailto:lanil9033@gmail.com">lanil9033@gmail.com</a></p>
+      <p><strong>Email:</strong> <a href="mailto:info@anillama.com.np">info@anillama.com.np</a></p>
       <p><strong>Phone:</strong> <a href="tel:+9865585569">+977 9865585569</a></p>
     </div>
   </section>
