--- a/nepali-typing/index.html
+++ b/nepali-typing/index.html
@@ -385,7 +385,7 @@ footer{background:#000;padding:45px 0;text-align:center;color:white;}
 <div class="contact-icon"><i class="fas fa-envelope"></i></div>
 <div class="contact-text">
 <h4>Email</h4>
-<p>nepalitypingcenter@gmail.com</p>
+<p>nepalityping@anillama.com.np</p>
 </div>
 </div>
 
