--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
             width="100%" height="360" frameborder="0" scrolling="no"
             style="border-radius: 8px;"></iframe>
     <p style="font-size: 12px; text-align: center; margin-top: 8px; color: #888;">© Nepali Unicode</p>
-<a href="https://anillama.com.np/nepalitypingcenter/" target="_blank" class="btn">Check Website</a>
+<a href="https://anillama.com.np/nepali-typing/" target="_blank" class="btn">Check Website</a>
   </section>
     
   <!-- Footer -->
