--- a/new/index.html
+++ b/new/index.html
@@ -747,7 +747,7 @@
                         <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--accent-primary); margin-right: 10px;"></i> Pixel Perfect Design</li>
                         <li><i class="fas fa-check-circle" style="color: var(--accent-primary); margin-right: 10px;"></i> 100% Client Satisfaction</li>
                     </ul>
-                    <a href="#" class="btn btn-outline">Download CV <i class="fas fa-download"></i></a>
+                    <a href="#" class="btn btn-outline">Download CV <i class="assets/ANIL LAMA CV.pdf"></i></a>
                 </div>
             </div>
         </div>
