--- a/new/index.html
+++ b/new/index.html
@@ -732,7 +732,7 @@
                 <div style="position: relative;">
                     <img src="https://picsum.photos/seed/avatar1/500/600.jpg" alt="Me" style="width: 100%; border-radius: 20px; filter: grayscale(100%);">
                     <div style="position: absolute; bottom: -20px; right: -20px; background: var(--accent-primary); padding: 20px; border-radius: 15px;">
-                        <h4 style="font-size: 2rem; margin-bottom: 0;">5+</h4>
+                        <h4 style="font-size: 2rem; margin-bottom: 0;">3+</h4>
                         <span style="font-size: 0.9rem;">Years Experience</span>
                     </div>
                 </div>
@@ -747,7 +747,9 @@
                         <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--accent-primary); margin-right: 10px;"></i> Pixel Perfect Design</li>
                         <li><i class="fas fa-check-circle" style="color: var(--accent-primary); margin-right: 10px;"></i> 100% Client Satisfaction</li>
                     </ul>
-                    <a href="#" class="btn btn-outline">Download CV <i class="assets/ANIL LAMA CV.pdf"></i></a>
+                    <a href="assets/ANIL LAMA CV.pdff" class="btn btn-outline" download>
+  Download CV
+</a>
                 </div>
             </div>
         </div>
