--- a/new/index.html
+++ b/new/index.html
@@ -747,7 +747,7 @@
                         <li style="margin-bottom: 10px;"><i class="fas fa-check-circle" style="color: var(--accent-primary); margin-right: 10px;"></i> Pixel Perfect Design</li>
                         <li><i class="fas fa-check-circle" style="color: var(--accent-primary); margin-right: 10px;"></i> 100% Client Satisfaction</li>
                     </ul>
-                    <a href="assets/ANIL LAMA CV.pdff" class="btn btn-outline" download>
+                    <a href="assets/ANIL LAMA CV.pdf" class="btn btn-outline" download>
   Download CV
 </a>
                 </div>
