--- a/new/index.html
+++ b/new/index.html
@@ -808,7 +808,7 @@
                 <a href="#" class="social-link"><i class="fab fa-dribbble"></i></a>
                 <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
             </div>
-            <p class="copyright">&copy; 2023 Alex Dev. All rights reserved.</p>
+            <p class="copyright">&copy; 2023 Anil Lama. All rights reserved.</p>
         </div>
     </footer>
 
