--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             style="border-radius: 8px;"></iframe>
     <p style="font-size: 12px; text-align: center; margin-top: 8px; color: #888;">© Nepali Unicode</p>
 <a href="https://anillama.com.np/nepali-typing/" target="_blank" class="btn">Check Website</a>
-    <a href="https://anillama.com.np/Typing-Game/" target="_blank" class="btn">Typing Game</a>
+    <a href="https://anillama.com.np/typing-game/" target="_blank" class="btn">Typing Game</a>
   </section>
     
   <!-- Footer -->
