--- a/typinggame/index.html
+++ b/typinggame/index.html
@@ -175,9 +175,9 @@
     </div>
 
     <div class="modal" id="startScreen">
-        <h1>NEO	N DEFENDER</h1>
-<h2>ANIL LAMA</h2>
-        <p class="subtitle">Type the words to destroy enemies.<br>Typing a wrong letter resets the word.</p>
+        <h1>TYPING DEFENDER</h1>
+        <h2>ANIL LAMA</h2>
+        <p class="subtitle">Type the words to destroy enemies.<br>Typing a wrong letter resets the word.<br>Press SPACE BUTTON to Level Up</p>
         <button class="btn" onclick="game.start()">START</button>
     </div>
 
