--- a/nepali-typing/index.html
+++ b/nepali-typing/index.html
@@ -415,7 +415,7 @@ footer{background:#000;padding:45px 0;text-align:center;color:white;}
                     width="100%" height="360" frameborder="0" scrolling="no"
                     style="border-radius: 8px; display:block; margin-bottom:15px;"></iframe>
             <p style="font-size: 12px; text-align: center; margin-bottom: 20px; color: #ccc;">© Nepali Unicode</p>
-            <a href="https://anillama.com.np/typing-game/" target="_blank" class="btn">Typing Game</a>
+            <a href="https://anillama.com.np/typinggame/" target="_blank" class="btn">Typing Game</a>
         </div>
     </div>
   </section>
