--- a/typinggame/index.html
+++ b/typinggame/index.html
@@ -236,7 +236,7 @@
         <p class="subtitle">Type the words to destroy enemies.<br>
         <strong>SMART TARGETING:</strong> If multiple words start the same (e.g. "select" & "server"), type until they differ to lock the correct one. <br>
         Typing a wrong letter resets your combo.<br> Press SPACE Button For Level Up</p>
-        <button class="btn" onclick="game.start()">INITIALIZE SYSTEM</button>
+        <button class="btn" onclick="game.start()">START GAME</button>
     </div>
 
     <div class="modal hidden" id="gameOverScreen">
