--- a/typinggame/index.html
+++ b/typinggame/index.html
@@ -336,11 +336,11 @@ const WORD_LIST = [
   "database","query","select","insert","update","delete","compile","execute","render",
   "debug","deploy","commit","push","pull","merge","branch","build","test","optimize",
   "thread","process","memory","cache","buffer","stream","packet","socket","router",
-  "switch","gateway","domain","host","ping","trace","latency","bandwidth","signal",
+  "switch","gateway","domain","anil","ping","trace","latency","bandwidth","signal",
   "sensor","camera","vision","audio","image","scalar","random","sample","filter",
-  "noise","smooth","sharp","pixel","frame","motion","engine","driver","device",
-  "screen","input","output","mouse","keyboard","touch","gesture","click","scroll",
-  "zoom","pan","lama","Anil","Parth","Saroj",
+  "noise","smooth","sharp","pixel","saroj","motion","engine","driver","device",
+  "screen","input","output","mouse","keyboard","parth","gesture","click","scroll",
+  "zoom","pan",
   "array","object","string","number","boolean","null","undefined","function","method","class",
   "module","import","export","default","async","await","promise","callback","event","listener",
   "state","props","mount","unmount","effect","layout","theme","style","color","font",
