--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <meta name="description" content="Anil Lama (अनिल लामा) - Personal portfolio website showing my projects, experience, awards, skills, Nepali Typing Center, and professional profile from Nepal.">
   <title>Anil Lama (अनिल लामा) - Portfolio | Web Professional from Nepal</title>
   
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-30TJT4D1LD"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-30TJT4D1LD');
+</script>
   <!-- SEO -->
 <meta name="description" content="Fast & Accurate Nepali & English typing, PDF to Word, Thesis Typing, and Form Filling services in Nepal.">
 <meta name="keywords" content="Nepali typing, Unicode typing, typing service Nepal, PDF to Word Nepal, thesis typing Nepal, government form typing,PDF to Word, typing Near Me, Nepali typing center, Portfolio, english to nepali">
