--- a/typinggame/index.html
+++ b/typinggame/index.html
@@ -424,9 +424,9 @@
 
     <!-- START SCREEN -->
     <div class="modal" id="startScreen">
-        <h1>TYPING DEFENDER</h1>
-        <h2>BY ANIL LAMA</h2>
-        <p class="subtitle">Type words to destroy enemies.<br>
+        <h1>TYPING GAME</h1>
+        <h2>BY ANIL LAMA </h2>
+        <p class="subtitle">Typing Game words to destroy enemies.<br>
         <strong>SMART TARGETING:</strong> If multiple words start the same, type until they differ to lock the correct one. <br>
         Typing a wrong letter resets your combo.<br>
         <strong>FEATURE:</strong> Press SPACE to spawn extra enemies instantly.<br>
